* 1.1

* Show openID reset form when clicking reset from profile form.
* Add simple formatting to changeset messages.  See http://forum.activereload.net/forums/9/topics/148
* Add post-commit hook API
* Fix bug with building permissions with anonymous users. [yrashk]
* replace lame Importer lib with ruby-sequel for db access
* Fixed progress reporting during admin synching of changesets

* 1.0.4

* Add initial display:none to sheet forms so they won't flash on the page during load
* Remove stray console.log in syncing causing Camino to fail
* when building the access file, only use active permissions
* Add link to reset your OpenID Address from your profile
* Fix nil error when deleting users, sweep cache when users are updated.
* fix error with date/time format when syncing
* remove OpenID requirements for installation
* Add confirmation message when deleting members
* Fix up errors with failing atom feeds.

* 1.0.3

* Add a new favicon
* Beef up the initial bootstrapping task.
* add deployment helper task.
* Fix bug with access file generation

* 1.0.2

* send valid ATOM feeds.
* update open_id rails plugin so that urls with '-'s are allowed.
* fixed a harsh bug with the sheets: http://forum.activereload.net/forums/8/topics/93

* 1.0.1

* Fix rare bug when viewing history of path that doesn't exist anymore
* Sweep the repository's cache when updating the access permissions.
* fix rare bug where FileUtils#install would clash with the #install route when running rake (only on textdrive)

* 1.0.0 RC

* Fix footer in IE 7 to align to left side of page
* Fix bookmark line height in IE 7, add ie specific style sheet curbstomp.css
* Fix permission form in IE 7.  Do not allow it to duplicate events on the add/subtract buttons.
* fix changeset/public reloading issues
* allow configurable session options
* lots of tweaks for repo admins accessing admin functions
* allow repo admins to add access permissions