@@ -19,5 +19,4 @@
 <%= will_paginate @changesets %>
 
 <% content_for :sidebar do -%>
-<%= link_to 'Subscribe to Changesets', history_path(:paths => (params[:paths] << 'changesets.atom')), :id => 'subscribe-btn' %>
 <% end -%>
